Fixed a bug where the key requirement for unlocking doors would randomly change every time the player interacted with them. The required number of keys is now determined when the door is spawned and remains consistent throughout the session.

--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,5 +1,6 @@
 new in 2.3
-Made it so door requirements are randomized between 15 and 30 keys to unlock it.
+Fixed a bug where the key requirement for unlocking doors would randomly change every time the player interacted with them. The required number of keys is now determined when the door is spawned and remains consistent throughout the session.
+Made it so door requirements are randomized between 15-30 keys for the normal game mode, and 30-60 keys for the endless game mode to unlock it.
 Adjusted some of the sound names found in the learn game sounds menu.
 Added an items category into the learn game sounds menu.
 Added some more player and UI related sounds into the learn game sounds menu.
