Added a sound count indicator to each category in the Learn game Sounds menu. Players can now see how many sounds are available in each category before entering the menu. This helps estimate the size of each group of sounds and improves overall navigation and clarity.

--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 2.3
+Added a sound count indicator to each category in the Learn game Sounds menu. Players can now see how many sounds are available in each category before entering the menu. This helps estimate the size of each group of sounds and improves overall navigation and clarity.
 Fixed a bug where the key requirement for unlocking doors would randomly change every time the player interacted with them. The required number of keys is now determined when the door is spawned and remains consistent throughout the session.
 Made it so door requirements are randomized between 15-30 keys for the normal game mode, and 30-60 keys for the endless game mode to unlock it.
 Adjusted some of the sound names found in the learn game sounds menu.
