--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 2.4
+Added the ability to draw and equip weapons with the new weapons menu. You can access this menu by pressing the letter W. This menu will only work in endless mode.
 Made it so pressing the number row keys doesn't draw the same weapon multiple times. From now on, switching to an already equipped weapon won't retrigger drawing the weapon again.
 Adjusted some breaking sounds for items and toys.
 Made it so menu related sounds don't play while a user is in one of the categories found in the learn game sounds menu.
@@ -52,14 +53,14 @@ Made it so session based achievements don't get coppied along with your actual i
 Added sounds for pausing and resuming the game.
 Added a pause menu to the normal and endless game modes. You can resume, view and copy aall of your session-based stats there.
 Made it so pressing the letter L tells you wich game mode you are on after announcing your current level.
-Made it so the machine gun is only available in the endless game mode. This also includes the restriction of keys to check and reload the ammo for it. The readme file's keyboard command section is also updated to reflect this change as well.
+Made it so the machine gun is only available in endless mode. This also includes the restriction of keys to check and reload the ammo for it. The readme file's keyboard command section is also updated to reflect this change as well.
 The endless game Mode has now been completely rebalanced to match the Normal game Mode for the first 6 levels. This offers a gradual and familiar introduction before the difficulty of the game increases. After level 6, the mode will start ramping up with more enemies and collectibles.
 Adjusted the Endless Mode progression for better difficulty scaling. Previously, the Endless Mode would overwhelm players early on by spawning guards, cars, and keys all at once.
-Added a keyboard shortcut to check the position of the winning door in the endless game mode. This shortcut is also in the readme file as well.
+Added a keyboard shortcut to check the position of the winning door in endless mode. This shortcut is also in the readme file as well.
 Made it so endless mode starts the player with 10,000 health instead of 1,000. This provides a better chance of survival against harder difficulties with spawned guards.
 Fixed an issue where cars would disappear between levels 4 and 6 in endless mode.
 Added descriptions to the game mode options found in the start game menu.
-Added an Endless Mode to the game. Players can now choose between Normal Mode and Endless Mode before starting a game. In Endless Mode, gameplay difficulty gradually increases over time without a final level, encouraging long play sessions and making session-based achievements more meaningful.
+Added an Endless Mode to the game. Players can now choose between easy and Endless before starting a game. In Endless Mode, gameplay difficulty gradually increases over time without a final level, encouraging long play sessions and making session-based achievements more meaningful.
 Addressed an issue where the behind pitch decrease option wasn't working propperly in the game when it was disabled in the settings menu.
 new in 1.9
 Made it so the former manual stat copy option found in the settings menu also controls the export items section located in several in-game menus. Players can now choose to show or hide both clipboard and file export items for achievements, statistics, and overall progress from various stat-based menus.
