--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 2.5
+Made it so car bullets can sometimes break items and toys while they are traveling.
 Made it so health related items start showing up in level 2 or higher in endless mode.
 Made it so cars will only shoot at you if you’re nearby. This prevents bullets from cluttering up the field at long distances, and makes car attacks more impactful when they’re up close.
 Made it so the damage of bullets fired by cars is randomized per car type. Different cars now fire bullets with varying damage specs.
