Fixed bugs, and added some small features related to the alarm system.
Added a voice-based countdown system for the final 10 seconds of the game in level 6. This creates a heightened sense of urgency as players race to reach the exit before time runs out.
Removed the alert sound associated with the boss showing up in level 6. The alarm sound will now serv as the warning indicater for it instead.

--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,6 @@
 new in 2.6
+Added a voice-based countdown system for the final 10 seconds of the game in level 6. This creates a heightened sense of urgency as players race to reach the exit before time runs out.
+Removed the alert sound associated with the boss showing up in level 6. The alarm sound will now serv as the warning indicater for it instead.
 Updated the readme file with added and modified keyboard shortcuts.
 Updated the D key behavior in Normal Mode to only announce how many keys are needed to unlock the door, without revealing the door’s location. This helps maintain focus and urgency during the time-limited phase of level 6.
 new in 2.5
