Updated some change log cosmetics.

--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,18 +1,18 @@
 new in 2.6
 Added a retry menu after failing Level 6 due to time running out. Players now have the option to instantly restart the Normal game mode after failing to escape the store in time. Instead of being taken back to the main menu, a quick “Try Again” prompt offers a more seamless and convenient way to attempt another run.
 Added randomized failure messages for when the time runs out in level 6. If the player fails to escape the store in time, a random humorous message will pop up instead of a static alert.
-Added music to the time limited level. This music will play through out the entire level, even after a successfull boss defeat.
 Fixed an issue where the final countdown voice in level 6 would trigger too early. The countdown now starts almost exactly when there's 10 seconds left on the clock.
 Added a voice-based countdown system for the final 10 seconds of the game in level 6. This creates a heightened sense of urgency as players race to reach the exit before time runs out.
 Removed the alert sound associated with the boss showing up in level 6. The alarm sound will now serv as the warning indicater for it instead.
-Replaced the main game ambience and music with new ones.
+Replaced the main game ambience and music with new ones. Credit goes to the producer of Andre Louis.
+Added music to the time limited level. This music will play through out the entire level, even after a successfull boss defeat.
 Updated the readme file with added and modified keyboard shortcuts.
 Updated the Y key behavior in Normal Mode to announce how much time is remaining when playing the sixth level, instead of the total playtime. This helps players stay aware of the countdown, and therefore better manage their time before the store goes boom.
 Updated the D key behavior in Normal Mode to only announce how many keys are needed to unlock the door, without revealing the door’s location. This helps maintain focus and urgency during the time-limited phase of level 6.
 new in 2.5
 Fixed an issue where the alarm sound in level 6 would continue to play even after the user has either died or won the game.
-The normal game mode is now time based. Players now have a limited amount of time to defeat the boss and escape the store once they reach level 6. A looping alarm sound plays during this final phase, increasing urgency. Failing to exit in time will result in the game being over.
-Recoded the post-game menus to support exporting session stats to a file. Players can now choose whether to copy their results to the clipboard, or export them to data/stats/player_posts.txt durring or after a game session.
+The normal game mode is now time based. Players now have a limited amount of time to defeat the boss and escape the store once they reach level 6. A looping alarm sound will play during this final phase. Failing to exit in time will result in the entire store exploding.
+Recoded the post-game menus to support exporting session stats to a file. Players can now choose whether to copy their results to the clipboard, or export them to data/stats/player_posts.txt. This can be durring or after a game session has ended.
 Made it so car bullets can sometimes break items and toys while they are traveling.
 Made it so health related items start showing up in level 2 or higher in endless mode.
 Made it so cars will only shoot at you if you’re nearby. This prevents bullets from cluttering up the field at long distances, and makes car attacks more impactful when they’re up close.
