--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 2.8
+Added the ability to adjust the preview volumes of sounds found in the learn game sounds menu. You can press shift plus page up or down to adjust this.
 Updated the readme file with added and modified keyboard shortcuts.
 Added the ability to adjust the heartbeat volume in all game modes. You can press shift plus home or end to adjust this. This setting is automaticly saved the next time you start a new game session.
 Made it so players can no longer collect items, keys, or toys while inside a door. They also can't be hit by bullets or enemies either. This prevents unintended interactions and ensures smoother transitions when exiting a level.
