--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 2.8
+Fixed an issue where preview volume would reset itself back to 0 upon selecting another playable sound in the learn game sounds menu.
 Added the ability to adjust the preview volumes of sounds found in the learn game sounds menu. You can press shift plus page up or down to adjust this.
 Updated the readme file with added and modified keyboard shortcuts.
 Added the ability to adjust the heartbeat volume in all game modes. You can press shift plus home or end to adjust this. This setting is automaticly saved the next time you start a new game session.
