Updated some of the player related sounds found in the learn game sounds menu.

--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 2.9
+Updated some of the player related sounds found in the learn game sounds menu.
 Added support for spawning dynamic platforms, used later on.
 new in 2.8
 Added speech and sound feedback to jammed doors. If anything is near a door and you try to press enter to open it, you'll get notified that it can't be opened because there's something near it, causing you not to end up passing through it to exit.
