--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 2.9
+Added the ability to check the store's HP. You can press the letter S to do this in normal mode.
 Updated some of the player related sounds found in the learn game sounds menu.
 Added support for spawning dynamic platforms, used later on.
 new in 2.8
