--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 2.9
+Added a sound for when the door is locked in all game modes.
 Added destructible platform effects during store collapse. As the store takes damage in Level 6, glass platforms now dynamically appear on either sides of the map, representing structural damage from the blast sight.
 Made it so you feel half the effects of a store explosion. This makes it seam more realistic as if you were in an actual store with a bomb going off.
 Added warning sounds for when the store gets damaged in normal mode.
@@ -8,7 +9,6 @@ Made it so pressing the lettor S tells you the maximim HP out of it's current HP
 Made it so pressing the lettor H tells you the maximim HP out of it's current HP remaining for the player.
 Added the ability to check the store's HP. You can press the letter S to do this in normal mode.
 Updated some of the player related sounds found in the learn game sounds menu.
-Added support for spawning dynamic platforms, used later on.
 new in 2.8
 Added speech and sound feedback to jammed doors. If anything is near a door and you try to press enter to open it, you'll get notified that it can't be opened because there's something near it, causing you not to end up passing through it to exit.
 Made it so doors can't be opened if enemies are nearby. If a boss, guard, or car is within 2 tiles of a door, the player is now blocked from opening it. This adds more realism by forcing players to clear out the area before leaving the store.
